--- a/Week 1/Assignment/starter_code/css/style.css
+++ b/Week 1/Assignment/starter_code/css/style.css
@@ -1,6 +1,6 @@
 body {
-	background: lightgray;
-	border: 5px solid black;
+	background: pink;
+	border: 5px solid red;
 	padding: 40px;
 	text-align: center;
 	font-family: arial, helvetica, sans-serif;
